--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8">
+  <title>homelink.pp.ua</title>
+  <style>
+    body {
+      background: #121212;
+      color: #ccc;
+      font-family: sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2em;
+      color: #888;
+    }
+    p {
+      font-size: 1em;
+      color: #555;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages</p>
+  <div>
+    <h1>homelink.pp.ua</h1>
+    <p>Сторінка доступна. Зміст не передбачено.</p>
+  </div>
 </body>
 </html>
