--- a/index.html
+++ b/index.html
@@ -5,30 +5,25 @@
   <title>homelink.pp.ua</title>
   <style>
     body {
-      background: #121212;
-      color: #ccc;
-      font-family: sans-serif;
+      margin: 0;
+      background: linear-gradient(135deg, #2c3e50, #000000);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      font-family: monospace;
+      color: #aaa;
+    }
+    .text {
       text-align: center;
-    }
-    h1 {
-      font-size: 2em;
-      color: #888;
-    }
-    p {
-      font-size: 1em;
-      color: #555;
+      font-size: 1.4rem;
     }
   </style>
 </head>
 <body>
-  <div>
-    <h1>homelink.pp.ua</h1>
-    <p>Сторінка доступна. Зміст не передбачено.</p>
+  <div class="text">
+    <p>Сторінка активна</p>
+    <p>Зміст не опубліковано</p>
   </div>
 </body>
 </html>
