--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
   <style>
     body {
       margin: 0;
-      background: linear-gradient(135deg, #2c3e50, #000000);
-      height: 100vh;
+      background: #1a1a1a;
+      color: #888;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      font-family: monospace;
-      color: #aaa;
+      justify-content: center;
+      height: 100vh;
+      font-family: sans-serif;
     }
-    .text {
-      text-align: center;
-      font-size: 1.4rem;
+    .logo {
+      font-size: 4rem;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
-  <div class="text">
-    <p>Сторінка активна</p>
-    <p>Зміст не опубліковано</p>
-  </div>
+  <div class="logo">🏠</div>
+  <div>Домен активний</div>
 </body>
 </html>
