--- a/index.html
+++ b/index.html
@@ -3,26 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <title>homelink.pp.ua</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
+    html, body {
       margin: 0;
-      background: #1a1a1a;
-      color: #888;
+      padding: 0;
+      background: radial-gradient(circle at center, #1f1f1f 0%, #0a0a0a 100%);
+      color: #ccc;
+      font-family: 'Segoe UI', sans-serif;
+      height: 100%;
+      overflow: hidden;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      font-family: sans-serif;
     }
-    .logo {
-      font-size: 4rem;
-      margin-bottom: 1rem;
+
+    .container {
+      text-align: center;
+      animation: fadeIn 2s ease-out;
+    }
+
+    .icon {
+      font-size: 5rem;
+      animation: pulse 3s infinite ease-in-out;
+    }
+
+    .text {
+      font-size: 1.2rem;
+      color: #666;
+      margin-top: 1rem;
+      user-select: none;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 0.8; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.8; }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
-  <div class="logo">🏠</div>
-  <div>Домен активний</div>
+  <div class="container">
+    <div class="icon">🏠</div>
+    <div class="text">homelink.pp.ua</div>
+  </div>
 </body>
 </html>
