--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>homelink.pp.ua</title>
+  <title>homelink — your private connection</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle at center, #1f1f1f 0%, #0a0a0a 100%);
+      background: linear-gradient(135deg, #0d0d0d, #1a1a1a);
       color: #ccc;
       font-family: 'Segoe UI', sans-serif;
       height: 100%;
-      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
     }
 
     .container {
@@ -23,34 +23,32 @@
       animation: fadeIn 2s ease-out;
     }
 
-    .icon {
-      font-size: 5rem;
-      animation: pulse 3s infinite ease-in-out;
+    .logo {
+      font-size: 2.5rem;
+      font-weight: 600;
+      letter-spacing: 1px;
+      background: linear-gradient(to right, #ffffff, #4fc3f7);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
-    .text {
-      font-size: 1.2rem;
-      color: #666;
+    .tagline {
       margin-top: 1rem;
-      user-select: none;
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 0.8; }
-      50% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.8; }
+      font-size: 1.1rem;
+      color: #777;
+      font-style: italic;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      to   { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="icon">🏠</div>
-    <div class="text">homelink.pp.ua</div>
+    <div class="logo">homelink</div>
+    <div class="tagline">your private connection</div>
   </div>
 </body>
 </html>
