--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <title>homelink — your private connection</title>
+  <meta charset="UTF-8" />
+  <title>homelink — пов'язує все, що важливе</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
       color-scheme: light dark;
-      --bg-dark: #0d0d0d;
-      --bg-light: #f2f2f2;
-      --text-dark: #ccc;
-      --text-light: #333;
+      --bg-dark: #0a0a0a;
+      --bg-light: #f4f4f4;
+      --text-dark: #ddd;
+      --text-light: #222;
       --accent-dark: #4fc3f7;
       --accent-light: #1976d2;
     }
@@ -19,12 +19,14 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       background: var(--bg-dark);
       color: var(--text-dark);
+      overflow: hidden;
+      position: relative;
       transition: background 0.5s, color 0.5s;
     }
 
@@ -35,40 +37,94 @@
       }
     }
 
+    .waves {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, rgba(79, 195, 247, 0.1) 0%, transparent 70%);
+      z-index: -1;
+      overflow: hidden;
+    }
+
+    .wave {
+      position: absolute;
+      bottom: 0;
+      width: 200%;
+      height: 200px;
+      background: var(--accent-dark);
+      opacity: 0.1;
+      border-radius: 50%;
+      animation: wave 10s linear infinite;
+    }
+
+    .wave:nth-child(2) {
+      animation-delay: -5s;
+      opacity: 0.08;
+    }
+
+    @media (prefers-color-scheme: light) {
+      .wave {
+        background: var(--accent-light);
+      }
+    }
+
+    @keyframes wave {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-50%); }
+    }
+
     .container {
       text-align: center;
       animation: fadeIn 2s ease-out;
+      z-index: 1;
     }
 
     .icon {
       width: 80px;
       height: 80px;
       margin-bottom: 1rem;
-      animation: pulse 3s infinite ease-in-out;
+      animation: pulse 4s infinite ease-in-out;
     }
 
     .logo {
-      font-size: 2.5rem;
-      font-weight: 600;
-      letter-spacing: 1px;
-      background: linear-gradient(to right, #ffffff, var(--accent-dark));
+      font-size: 3rem;
+      font-weight: 700;
+      background: linear-gradient(to right, #fff, var(--accent-dark));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
     @media (prefers-color-scheme: light) {
       .logo {
-        background: linear-gradient(to right, #000000, var(--accent-light));
+        background: linear-gradient(to right, #000, var(--accent-light));
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
       }
     }
 
+    .equation {
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      color: var(--accent-dark);
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 2px solid var(--accent-dark);
+      animation: typing 4s steps(30, end) forwards, blink 0.75s step-end infinite;
+    }
+
+    @media (prefers-color-scheme: light) {
+      .equation {
+        color: var(--accent-light);
+        border-right: 2px solid var(--accent-light);
+      }
+    }
+
     .tagline {
-      margin-top: 0.7rem;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-style: italic;
-      color: #777;
+      color: #888;
+      margin-top: 0.5rem;
+      animation: fadeIn 4.5s ease-out;
     }
 
     @media (prefers-color-scheme: light) {
@@ -77,28 +133,44 @@
       }
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 0.85; }
-      50% { transform: scale(1.15); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.85; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to   { opacity: 1; transform: translateY(0); }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 0.9; }
+      50% { transform: scale(1.1); opacity: 1; }
+      100% { transform: scale(1); opacity: 0.9; }
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
+    @keyframes blink {
+      from, to { border-color: transparent; }
+      50% { border-color: inherit; }
     }
   </style>
 </head>
 <body>
+  <div class="waves">
+    <div class="wave"></div>
+    <div class="wave"></div>
+  </div>
+
   <div class="container">
-    <!-- SVG іконка "домик" -->
+    <!-- Іконка-домик -->
     <svg class="icon" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M32 8L8 28H16V56H28V40H36V56H48V28H56L32 8Z"
         fill="currentColor" />
     </svg>
 
     <div class="logo">homelink</div>
-    <div class="tagline">your private connection</div>
+    <div class="equation">home + link = homelink</div>
+    <div class="tagline">пов'язує все, що важливе</div>
   </div>
 </body>
 </html>
